--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -267,11 +267,11 @@ with speed proportional to the distance $\rho(\phi) = PB$. The exploration below
 \begin{exploration}
 \begin{onlineOnly}
     \begin{center}
-\desmos{ l7oadgwyva}{450}{600}  
+\desmos{l7oadgwyva}{450}{600}  
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/ l7oadgwyva}{Poncelt Metric with Jacobi Functions 3} %   q16ify3gtm
+\href{https://www.desmos.com/calculator/l7oadgwyva}{Poncelt Metric with Jacobi Functions 3} %   q16ify3gtm
 \end{exploration}
 
 To prove that this motion is indeed constant-time, we first need to show (\ref{Eq:ArcLengths2}) in part (a) above holds. For this, let $\phi$ be the angle radius $\overline{AB}$ makes with the horizontal and $\alpha$ the acute angle $\overline{PP^\prime}$ makes with ${\cal C}_1$. Then 
