--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -22,5 +22,6 @@ started with Ximera for course instructors.
 \activity{BishopFrames/BishopFrames} 
 \activity{ClockHands/ClockHands} 
 \activity{DiscoDancing/DiscoDancing} 
+\activity{RockArt/RockArt} 
 
 \end{document}
