--- a/RockArt/RockArt.tex
+++ b/RockArt/RockArt.tex
@@ -22,4 +22,17 @@ Zoom in on the picture below. What do you see?
 \href{https://www.desmos.com/calculator/awoec8d6pq}{163: Rock Art}
 \end{exploration}
 
+
+\begin{exploration}
+Click and rotate the image so the orange vector points directly toward you. What happens?
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{9g2timus2m}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/3d/9g2timus2m}{163: Rock Art 1}
+\end{exploration}
+
+
 \end{document}
