--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -23,5 +23,6 @@ started with Ximera for course instructors.
 \activity{ClockHands/ClockHands} 
 \activity{DiscoDancing/DiscoDancing} 
 \activity{RockArt/RockArt} 
+\activity{LawofCosines/LawofCosines}
 
 \end{document}
