--- a/RockArt/RockArt.tex
+++ b/RockArt/RockArt.tex
@@ -24,7 +24,7 @@ Zoom in on the picture below. What do you see?
 
 
 \begin{exploration}
-Click and rotate the image so the orange vector points directly toward you. What happens?
+Click and rotate the image so the orange vector points directly toward you. What happens? Experiment with the sliders, zooming out as need be.
 \begin{onlineOnly}
     \begin{center}
 \desmosThreeD{9g2timus2m}{800}{600}  
