--- a/BishopFrames/BishopFrames.tex
+++ b/BishopFrames/BishopFrames.tex
@@ -217,6 +217,35 @@ Serge Lang Basic Mathematics
 
 
 \section*{Rotational Motion of Frenet and Bishop Frames}
+
+
+\begin{exploration}
+The animation below shows the motion of the Frenet frame, traveling (top) and pinned (bottom) for a cylindrical helix with radius $a$ and pitch angle $\phi$. What is the frame's centrode (ie. angular velocity vector with respect to arc length)?
+
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{hkqr8xjops}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/3d/hkqr8xjops}{163: Rotational Motion of Frenet Frame}
+\end{exploration}
+
+
+
+
+\begin{exploration}
+The animation below shows the motion of a Bishop frame, traveling (top) for a cylindrical helix with radius $a$ and pitch angle $\phi$. Can you predict the motion of the pinned frame (bottom)? What is the frame's centrode?
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{hkqr8xjops}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/3d/hkqr8xjops}{163: Rotational Motion of Frenet Frame}
+\end{exploration}
+
+
 For the Frenet frame, since
 \[
       {\bf B}^\prime = -\tau {\bf N} ,
@@ -361,10 +390,39 @@ with components
 
 
 
+\section*{Parallel Frames Look Parallel}
+
+\begin{exploration}
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{jzp8zemhz6}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/3d/jzp8zemhz6}{Cone and Parallel Vector Field}
+\end{exploration}
+
+
+
+
+\section*{Torus}
+
+\begin{exploration}
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{pkd5ztemml}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/3d/pkd5ztemml}{Torus Parallel Vector Field}
+\end{exploration}
 
 
 
 \section*{Curves of Constant Precession}
+
+
+
 
 
 
