--- a/BishopFrames/BishopFrames.tex
+++ b/BishopFrames/BishopFrames.tex
@@ -421,6 +421,17 @@ with components
 
 \section*{Curves of Constant Precession}
 
+\begin{exploration}
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{nsifyzlx3p}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/3d/nsifyzlx3p}{163: Curves of Constant Precession 4}
+\end{exploration}
+
+
 
 
 
