--- a/BishopFrames/BishopFrames.tex
+++ b/BishopFrames/BishopFrames.tex
@@ -402,7 +402,15 @@ with components
 \href{https://www.desmos.com/3d/jzp8zemhz6}{Cone and Parallel Vector Field}
 \end{exploration}
 
+\begin{exploration}
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{2w08awnhab}{800}{600}  
+\end{center}
+\end{onlineOnly}
 
+\href{https://www.desmos.com/3d/2w08awnhab}{Cone and Parallel Vector Field 2}
+\end{exploration}
 
 
 \section*{Torus}
