--- a/BishopFrames/BishopFrames.tex
+++ b/BishopFrames/BishopFrames.tex
@@ -392,6 +392,19 @@ with components
 
 \section*{Parallel Frames Look Parallel}
 
+Activate and Deactivate the folders in Line 25 (parallel vector field along circle of latitude) and Line 33 (geodesics on the cone in the initial direction of the parallel vector field).
+
+\begin{exploration}
+\begin{onlineOnly}
+    \begin{center}
+\desmosThreeD{ftsbnajcn4}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/3d/ftsbnajcn4}{Cone and Parallel Vector Field 2}
+\end{exploration}
+
+
 \begin{exploration}
 \begin{onlineOnly}
     \begin{center}
