--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -24,5 +24,6 @@ started with Ximera for course instructors.
 \activity{DiscoDancing/DiscoDancing} 
 \activity{RockArt/RockArt} 
 \activity{LawofCosines/LawofCosines}
+\activity{DopplerEffect/DopplerEffect}
 
 \end{document}
