--- a/DopplerEffect/DopplerEffect.tex
+++ b/DopplerEffect/DopplerEffect.tex
@@ -10,6 +10,63 @@ This note is based on the Max Bondi's book \emph{Relativity and Common Sense}.
 \maketitle
 
 
-Nothing yet
+Doppler Effect with Sound:
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{t1jmkomfwd}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/t1jmkomfwd}{Doppler Effect Stationary Observer With Sound 3}
+
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{mygzufvdgk}{800}{600}         %zk06s3k6q4
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/zk06s3k6q4}{Doppler Stationary Observer 1}
+
+
+The problem here should be to relate the frequencies at time $t=-0.5$ when $v=1$, $w=2$, and $h=4$. The result should be that 
+\[
+    f_1 = 0.7 f_2 . 
+\]
+
+
+
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{celviaogz7}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/celviaogz7}{Doppler Stationary Observer 2}
+
+Doppler Effect with Sound:
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{gxzmjpgkrr}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/gxzmjpgkrr}{Doppler Effect Stationary Observer 2 With Sound}
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{sf3nnahyjf}{800}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/sf3nnahyjf}{Doppler Effect Partial Derivatives}
+
+
+
 
 \end{document}
