--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -13,7 +13,7 @@ We investigate the families of \emph{isochronous chords} of a pendulum motion. T
 
 %Think of a simple pendulum, and you might picture a mass oscillating at the end of a string. But imagine instead a mass attached to a weightless rod or a small bead that slides around a circluar wire, either launched with sufficient speed to repeatedly revolve around its circular path. Now construct chords around the circular path of this revolving pendulum that bisect the period in the sense that the pendulum traveses the two arcs subtended by each chord in equal times. One such chord is the vertical diameter. Another is horizontal, but where? And what can we say about the other bisecting chords?
 
-Think of a simple pendulum, and you might picture a mass oscillating at the end of a string. But imagine instead a mass attached to a weightless rod launched from its low point with sufficient speed to repeatedly revolve around its circular path. Now construct chords around the circular path of this revolving pendulum that bisect the period - the pendulum should traverse the arcs subtended by each chord in half the period. One such chord is the vertical diameter. Another is horizontal. But what can we say about the other bisecting chords?
+Think of a simple pendulum and you might picture a mass oscillating at the end of a string. But imagine instead a mass attached to a weightless rod launched from its low point with sufficient speed to repeatedly revolve around its circular path. Now construct chords around the path of this revolving pendulum that bisect the period - the pendulum should traverse the arcs subtended by each chord in half the period. One such chord is the vertical diameter. Another is horizontal. But what can we say about the other bisecting chords?
 
 Suppose, as in the exploration below, we are given the horizontal chord that bisects the period. How can we draw other bisecting chords?
 
@@ -71,12 +71,12 @@ It turns out that these questions are closely related to a classical theorem fro
 
 %Draw a smaller circle (${\cal C}_2$) inside a larger one (${\cal C}_1$). Then pick a point $P_0$ on ${\cal C}_1$ and construct a polygonal path $P_0 P_1 P_2 \ldots$ of chords $\overline{P_0P_1}$, $\overline{P_0P_1}, \ldots$ tangent to ${\cal C}_2$ running counterclockwise around ${\cal C}_1$. Most likely the path never closes.  But if by chance it does, then it was not because you made a fortunate choice of $P_0$ but because you were lucky in choosing the initial confuguation of circles. The  path then would close for any starting point and do so in the same way. The figure below shows a configuration of ${\cal C}_1$ and ${\cal C}_2$ for which the path closes with five segments and forms a pentagram circumscribed about ${\cal C}_2$.
 
-Draw a smaller circle (${\cal C}_2$) inside a larger one (${\cal C}_1$). Then pick a point $P_0$ on ${\cal C}_1$ and construct a polygonal path $P_0 P_1 P_2 \ldots$ of chords $\overline{P_0P_1}$, $\overline{P_0P_1}, \ldots$ tangent to ${\cal C}_2$ running counterclockwise around ${\cal C}_1$. Most likely the path never closes.  But if it does, then it was not because you chose the right starting point but because you were lucky in choosing the initial confuguation of circles. The path would then close for any starting point and do so in the same way. The figure below shows a configuration of ${\cal C}_1$ and ${\cal C}_2$ for which the path closes with five segments and forms a pentagram circumscribed about ${\cal C}_2$.
+Draw a smaller circle (${\cal C}_2$) inside a larger one (${\cal C}_1$). Then pick a point $P_0$ on ${\cal C}_1$ and construct a polygonal path $P_0 P_1 P_2 \ldots$ of chords $\overline{P_0P_1}$, $\overline{P_0P_1}, \ldots$ tangent to ${\cal C}_2$ running counterclockwise around ${\cal C}_1$. Most likely the path never closes.  But if so, it was not because you chose a good starting point but because you were lucky in choosing the initial confuguation of circles. The path would then close for any starting point and do so in the same way. The figure below shows a configuration of ${\cal C}_1$ and ${\cal C}_2$ for which the path closes with five segments and forms a pentagram circumscribed about ${\cal C}_2$.
 
 
 This fact is the circular version of Poncelet's Porism (a similar statement holds for two nested ellipses). The only proof I've seen relies on defining a new metric around ${\cal C}_1$, one with the property that all chords tangent to ${\cal C}_2$ subtend equal arclengths of ${\cal C}_1$. 
 
-Defining this metric is like wrapping a number line around ${\cal C}_1$ as illustrated in the figure below. There the tick marks are spaced at equal intervals, say one unit apart and each chord subtends a shorter arc of $8$ units. Since ${\cal C}_1$ has circumference $24$ units, every path (not just the one shown) closes after three chords and forms a triangle circumscribed about ${\cal C}_2$.  
+Defining this metric is like wrapping a number line around ${\cal C}_1$ as illustrated in the figure below. There the tick marks are spaced at equal intervals, say one unit apart, and each chord subtends a shorter arc of $8$ units. Since ${\cal C}_1$ has circumference $24$ units, every path (not just the one shown) closes with three chords and forms a triangle circumscribed about ${\cal C}_2$.  
 
 \begin{exploration}
 Move the slider $\theta_1$ to change the path and slider $a$ to change the distance between the centers of ${\cal C}_1$ and ${\cal C}_2$.
@@ -104,14 +104,13 @@ In the example below, each chord subtends $2/5$ of the circumference in the new 
 
 \end{exploration}
 
-We can better relate the proof of Poncelet's Porism to revolving pendulums by replacing the distance metric around ${\cal C}_1$ with a time metric. Imagine instead a motion around ${\cal C}_1$ that traverses the shorter arcs subtended by the tangent chords in equal times. A priori, it's not clear such an \emph{equal-time} motion exits, but its existence would prove Poncelet's Porism.
-Then suppossing a period of one second, every path would form a $\{p/q \}$ star polygon for a motion that takes $\lambda = p/q$ seconds to traverse each rightward arc. And the paths with irrational $\lambda$ would never close. 
+We can better relate the proof of Poncelet's Porism to revolving pendulums by replacing the distance metric around ${\cal C}_1$ with a time metric. Imagine instead a motion around ${\cal C}_1$ that traverses the quicker arcs subtended by the tangent chords in equal times. A priori, it's not clear such an \emph{equal-time} motion exits, but if so, we would have a proof of Poncelet's Porism. Supposing a period of one second, every path would form a $\{p/q \}$ star polygon for a motion that takes $\lambda = p/q$ seconds to traverse each rightward arc. And the paths with irrational $\lambda$ would never close. 
 
  %Then every path, for example, would close with three segments for a motion that takes $1/3$ the period to traverse each arc. %If for example, the motion takes $1/3$ the period to tranverse each arc, then each path would close with three segments.
 
-It's easy to describe such a motion when ${\cal C}_1$ is a point $A$. Then Poncelet's Porism is trivially true (each path closes with two segments) and a motion that rotates about $A$ at a constant rate traverses all the arcs subtended by the chords through $A$ in half the period. But there are many other equal-time motions when ${\cal C}_1$ is a point, some of which are easier to describe algebraically. 
+It's easy to describe such a motion when ${\cal C}_1$ is a point $A$. Then Poncelet's Porism is trivially true (each path closes with two segments) and a motion that rotates about $A$ at a constant rate traverses the arcs subtended by the chords through $A$ in half the period. But there are other equal-time motions when ${\cal C}_1$ is a point, one of which is easier to describe algebraically than all the others. 
 
-Because the equal-time condition relates only the times to traverse arcs subtended by chords through $A$, we have the freedom to arbitrarily define half the motion on either of the two arcs subtended by a particular chord through $A$. This choice, assumed to be continuous, then determines the motion along the other arc. The motion there is traced by the other end $P^\prime$ of the chord $\overline{PP^\prime}$ through $A$ as $P$ follows its arbitrarily defined motion along the chosen arc. The reason is simply because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
+Because the equal-time condition relates only the times to traverse arcs subtended by chords through $A$, we have the freedom to arbitrarily define the motion on either of the two arcs subtended by a particular chord through $A$. This choice, assumed to be continuous, then determines the motion along the other arc. The motion there is traced by the other end $P^\prime$ of the chord $\overline{PP^\prime}$ through $A$ as $P$ follows its arbitrarily defined motion along the chosen arc. The reason is because from any initial position of the chord, the points $P$ and $P^\prime$ arrive simultaneously at the other's starting point.
 
 
 
@@ -283,7 +282,7 @@ with speed proportional to the distance $\rho(\phi) = PB$. The explorations belo
 \href{https://www.desmos.com/calculator/hm5zop04ob}{Poncelt Metric with Jacobi Functions 2}
 \end{exploration}
 
-To prove that the motion (\ref{EqualTime8}) is indeed constant-time, we first need to show (\ref{Eq:ArcLengths2}) in part (a) above holds. For this, let $\phi$ be the angle radius $\overline{AB}$ makes with the horizontal and $\alpha$ the acute angle $\overline{PP^\prime}$ makes with ${\cal C}_1$. Then 
+To prove that the motion (\ref{Eq:EqualTime8}) is indeed equal-time, we first need to show (\ref{Eq:ArcLengths2}) in part (a) above holds. For this, let $\phi$ be the angle radius $\overline{AB}$ makes with the horizontal and $\alpha$ the acute angle $\overline{PP^\prime}$ makes with ${\cal C}_1$. Then 
 \[
       \overrightarrow{AB} = \langle r\cos \phi, r\sin\phi \rangle
 \]
@@ -303,7 +302,7 @@ The above resolves the component of $P$'s displacement into two components, the 
 \]
 along ${\cal C}_1$. 
 
-As for part (b), by subtraction (ie. differentiation)  $P$ and $P^\prime$ traverse their respective differential arclengths for an equal-time motion in equal times. And the conversely holds by addition (ie. integration). For a formal proof, it helps to regard $\rho = BP$ as a function $\rho = g(\theta)$ of the central angle $\angle EOP$ (see Figure ?). Then $ds = R \, d\phi$ and with $\theta^\prime = k(\theta)$ the central angle $\angle EOP^\prime$, the time for the motion to traverse the arc subtended by $\overline{PP^\prime}$ is
+As for part (b), by subtraction (ie. differentiation)  $P$ and $P^\prime$ traverse their respective differential arclengths for an equal-time motion in equal times. And the converse holds by addition (ie. integration). For a formal proof, it helps to regard $\rho = BP$ as a function $\rho = g(\theta)$ of the central angle $\angle EOP$ (see Figure ?). Then $ds = R \, d\phi$ and with $\theta^\prime = k(\theta)$ the central angle $\angle EOP^\prime$, the time for the motion to traverse the arc subtended by $\overline{PP^\prime}$ is
 \[
   T(\theta) =  \int_\theta^{k(\theta)} \frac{R\, d\theta^*}{\omega_0 g(\theta^*)}.
 \]
@@ -311,10 +310,16 @@ Then
 \begin{align*}
   \frac{d}{d\theta} \int_\theta^{k(\theta)} \frac{R\, d\theta^*}{\omega_0 g(\theta^*)} &= \frac{R}{\omega_0}\left(   \frac{k^\prime(\theta)}{g(k(\theta))} - \frac{1}{g(\theta)}        \right) = 0
 \end{align*}
-since by part (a) above
+if and only if 
 \[
-   k^\prime(\theta) = \frac{d\theta^\prime}{d\theta} =   \frac{\rho^\prime}{\rho}   = \frac{g(k(\theta))}{g(\theta)}.
+    k^\prime(\theta) = \frac{g(k(\theta))}{g(\theta)}.
 \]
+But by part (a) above
+\[
+   k^\prime(\theta) = \frac{d\theta^\prime}{d\theta} =   \frac{\rho^\prime}{\rho}   = \frac{g(k(\theta))}{g(\theta)}
+\]
+and the condition tha
+
 
 So the existence of the equal-time function
 \[
