--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -22,6 +22,7 @@ started with Ximera for course instructors.
 \activity{BishopFrames/BishopFrames} 
 \activity{ClockHands/ClockHands} 
 \activity{DiscoDancing/DiscoDancing} 
+\activity{PendulumPoncelet/PendulumPoncelet}
 \activity{RockArt/RockArt} 
 \activity{LawofCosines/LawofCosines}
 \activity{DopplerEffect/DopplerEffect}
