--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -255,7 +255,7 @@ So if we knew \emph{apriori} that a particular configuration of ${\cal C}_1$, ${
 \]
 where $\Delta PP^\prime P^{\prime\prime}$ is circumscribed about ${\cal C}_1$ in the same sense as $\Delta CDE$ (see Figure ????).
 
-But if we knew nothing about the particular configuration of circles, the only possible choice for a constant-time motion would be
+But if we knew nothing about the particular configuration of circles, the only possible choice for an equal-time motion would be
 \begin{equation}
     v_P =  v_P(\phi) = \omega_0 \rho(\phi)   \label{Eq:EqualTime8}
 \end{equation}
@@ -312,13 +312,13 @@ Then
 \end{align*}
 if and only if 
 \[
-    k^\prime(\theta) = \frac{g(k(\theta))}{g(\theta)}.
+    k^\prime(\theta) = \frac{g(k(\theta))}{g(\theta)} = \frac{v_{P^\prime}}{v_P}.
 \]
 But by part (a) above
 \[
-   k^\prime(\theta) = \frac{d\theta^\prime}{d\theta} =   \frac{\rho^\prime}{\rho}   = \frac{g(k(\theta))}{g(\theta)}
+   k^\prime(\theta) = \frac{v_{P^\prime}}{v_P}   =  \frac{d\theta^\prime}{d\theta} =   \frac{\rho^\prime}{\rho}.
 \]
-and the condition tha
+and the motion (\ref{Eq:equalTime8}) is an equal-time motion.
 
 
 So the existence of the equal-time function
